--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@ layout: page
 # Index page
 ---
 
+
+
+
+
+
+<center>
 I am a 2<sup>nd</sup>-year graduate student enrolled in the Ph.D. program at Quantum Theory Project, Department of Chemistry, University of Florida. 
 My interest lies in studying the structure of the many-electron systems and thus tackling the problem of the strong correlation. All the efforts
 are made because it has been very challenging for the mankind to capture the correlation between electrons present in the chemical system.
 I would like to work on the interface of Quantum Chemistry and Quantum Computing. Along with the Ph.D. routine life, I enjoy biking and reading. 
 Cooking and serving is part of my hobby.
+</center>
