--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@ layout: page
 <br>
 <br>
 <br>
-<br>
- <font size="+2">I am a 2<sup>nd</sup>-year graduate student enrolled in the Ph.D. program at Quantum Theory Project, Department of Chemistry, University of Florida. 
-My interest lies in studying the structure of the many-electron systems and thus tackling the problem of the strong correlation. All the efforts
-are made because it has been very challenging for the mankind to capture the correlation between electrons present in the chemical system.
-I would like to work on the interface of Quantum Chemistry and Quantum Computing. Along with the Ph.D. routine life, I enjoy biking and reading. 
-Cooking and serving is part of my hobby. </font>
+ <font size="+1">I am a 3<sup>rd</sup>-year graduate student enrolled in the Ph.D. program at Quantum Theory Project, Department of Chemistry, University of Florida. 
+My interest lies in studying the chemistry through behavior of electrons around nuclei. Currently, I am working on developing electronic wavefunctions to approximate 
+the mysterious problem of strong electronic correlation. I find the simulations of chemical systems using quantum computers more appealing. Along with the Ph.D. routine
+life, I enjoy biking and reading. Cooking and serving is part of my hobby. </font>
 
