--- a/index.html
+++ b/index.html
@@ -12,4 +12,4 @@ life, I enjoy biking and reading. Cooking and serving is part of my hobby. </fon
 <br>
 <br>
 <br>
-<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1zylVqjyXvB5Vc7Fx7IPCH0p-BIdOppI&ehbc=2E312F" width="640" height="480"></iframe>
+<!---<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1zylVqjyXvB5Vc7Fx7IPCH0p-BIdOppI&ehbc=2E312F" width="640" height="480"></iframe>--->
