--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@ layout: page
 # Index page
 ---
 
- <font size="+1">I am a 3<sup>rd</sup>-year graduate student enrolled in the Ph.D. program at Quantum Theory Project, Department of Chemistry, University of Florida. 
-My interest lies in studying the chemistry through behavior of electrons around nuclei. Currently, I am working on developing electronic wavefunctions to approximate 
-the mysterious problem of strong electronic correlation. I find the simulations of chemical systems using quantum computers more appealing. Along with the Ph.D. routine
-life, I enjoy biking and reading. Cooking and serving is a part of my hobby. </font>
+<br>
+<br>
+ <font size="+1">I am a 5<sup>th</sup>-year Ph.D. candidate at Quantum Theory Project, Department of Chemistry, University of Florida. 
+My interest lies in studying the chemistry through the behavior of electrons around nuclei. Currently, I am working on developing electronic wavefunctions to approximate 
+the mysterious problem of strong electronic correlation. I find simulations of chemical systems using quantum computers more appealing. Along with the Ph.D. routine
+life, I enjoy reading and biking. Cooking and serving are a part of my hobby. </font>
 <br>
 <br>
 <br>
