--- a/index.html
+++ b/index.html
@@ -3,15 +3,12 @@ layout: page
 # Index page
 ---
 
-<br>
-<br>
- <font size="+1">I am a 5<sup>th</sup>-year Ph.D. candidate at Quantum Theory Project, Department of Chemistry, University of Florida. 
-My interest lies in studying the chemistry through the behavior of electrons around nuclei. Currently, I am working on developing electronic wavefunctions to approximate 
-the mysterious problem of strong electronic correlation. I find simulations of chemical systems using quantum computers more appealing. Along with the Ph.D. routine
-life, I enjoy reading and biking. Cooking and serving are a part of my hobby. </font>
-<br>
-<br>
-<br>
-<br>
-<br>
+<div style="display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; height: 100vh;">
+  <font size="+1">
+    I am a 5<sup>th</sup>-year Ph.D. candidate at Quantum Theory Project, Department of Chemistry, University of Florida. 
+    My interest lies in studying chemistry through the behavior of electrons around nuclei. Currently, I am working on developing electronic wavefunctions to approximate 
+    the mysterious problem of strong electronic correlation. I find simulations of chemical systems using quantum computers more appealing. Along with the Ph.D. routine
+    life, I enjoy reading and biking. Cooking and serving are a part of my hobby.
+  </font>
+</div>
 <!---<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1zylVqjyXvB5Vc7Fx7IPCH0p-BIdOppI&ehbc=2E312F" width="640" height="480"></iframe>--->
