--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 # Index page
 ---
 
-<div style="display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; height: 100vh;">
+<div style="width: 60%; margin: 50px auto 0 auto; text-align: justify;"">
   <font size="+1">
     I am a 5<sup>th</sup>-year Ph.D. candidate at Quantum Theory Project, Department of Chemistry, University of Florida. 
     My interest lies in studying chemistry through the behavior of electrons around nuclei. Currently, I am working on developing electronic wavefunctions to approximate 
